Tue Oct  6 19:24:38 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_method0): use switch() for visibilities
	  (for readability).

Tue Oct  6 19:23:58 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c (Init_Proc): Proc#call and others should be public.

Tue Oct  6 18:51:51 2015  Koichi Sasada  <ko1@atdot.net>

	* method.h: IMEMO_FL_USER3 and IMEMO_FL_USER4 is not needed any more.

Tue Oct  6 18:47:45 2015  Koichi Sasada  <ko1@atdot.net>

	* method.h: remove METHOD_ENTRY_SAFE(me) and related code
	  because $SAFE = 3 and 4 is not available.
	  Now, $SAFE is not checked on method dispatch at all.

	* vm_eval.c, vm_insnhelper.c, vm_method.c: ditto.

Tue Oct  6 13:56:14 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h: turn function macros into inline functions,
	  for debuggers.

	* include/ruby/ruby.h: turn constant macros into enums, for
	  debuggers.

Tue Oct  6 13:48:05 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* method.h: typo fix. Patch by @davydovanton [fix GH-1032][ci skip]

Tue Oct  6 06:54:34 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (rb_iseq_free): free iseq::variable_body to avoid memory
	  leak.

Tue Oct  6 06:32:52 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c: enable optimization of Proc#call.
	  [Feature #11569]

	* NEWS: write about this optimization and incompatibilities.

	* test/ruby/test_backtrace.rb: catch up this fix.

Tue Oct  6 04:41:03 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c: solve goto spaghetti.

	  Change all goto statement across blocks to tail call functions.

Tue Oct  6 02:29:38 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_resurrect): optimize by short circuit to copy
	  hidden string without checking length, encoding and so on.

Mon Oct  5 23:08:17 2015  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* test/ruby/test_thread.rb (test_handle_interrupt_blocking): check if
	  exception handling was postponed until sleep.
